スピーカー情報を追加。画像変更まち

--- a/index.html
+++ b/index.html
@@ -60,17 +60,18 @@
                     <article>
                         <h3>スピーカー</h3>
                         <div class="speaker">
+                            <!-- TODO：後ほど写真を変更する -->
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>1人目: 未定</h4>
-                                <p>1人目のプロフィール</p>
+                                <h4>1人目: 鈴木氏</h4>
+                                <p>公務員</p>
                             </div>
                         </div>
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>2人目: 未定</h4>
-                                <p>2人目のプロフィール</p>
+                                <h4>2人目: 田中氏</h4>
+                                <p>IT企業経営者</p>
                             </div>
                         </div>
                     </article>
