--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/main.css"/>
 </head>
 <body>
-
+<!-- コメント追加 -->
 <!-- Header -->
 <section id="header">
     <header>
